# template-aws-severless-cicd

./: .gitattributes  .gitignore  LICENSE  README.md  pyproject.toml  requirement.txt  requirements.txt
.github/workflows/: check_layer_changed.yml  ci&cd.yml  ci-cd-pipelin-workflow.yml  ci-cd-pipeline-workflow.yml  cicd-pipeline-workflow.yml  main.yml  test.yml  test_workflow.yml
app/: main.py
