[tool.poetry]
name = "template-github-serverless"
version = "0.1.0"
description = "CI/CD Pipeline for AWS based FastApi"
authors = [
    "sikso1897 <sikso1897@gmail.com>"
]
license = "MIT"
readme = "README.md"

include=[
    { path="app", format="sdist" }
]

[tool.poetry.build]
generate-setup-file = false

[tool.black]
line-length = 79
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.poetry.dependencies]
python = "^3.8"
anyio = "3.6.2"
attrs = "22.1.0"
certifi = "2022.12.7"
click = "8.1.3"
exceptiongroup = "1.0.4"
fastapi = "0.88.0"
h11 = "0.14.0"
httpcore = "0.16.2"
httpx = "0.23.1"
idna = "3.4"
iniconfig = "1.1.1"
mangum = "0.17.0"
packaging = "22.0"
pluggy = "1.0.0"
pydantic = "1.10.2"
rfc3986 = "1.5.0"
sniffio = "1.3.0"
starlette = "0.22.0"
tomli = "2.0.1"
typing-extensions = "4.4.0"
uvicorn = "0.20.0"

[tool.poetry.group.dev.dependencies]
pytest = "7.2.0"
black = "^22.12.0"
isort = "^5.11.2"
mypy = "^0.991"
pytest-cov = "^4.0.0"
poethepoet = "^0.16.5"
requests = "^2.28.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
